# skanestas

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.py
provisioning/dashboards/: dashboard.yml  tracks.json
provisioning/datasources/: automatic.yml
update_prices/: clickhouse.py  jobs.py  main.py  settings.py
