[tool.poetry]
name = "skanestas_test_task"
version = "0.1.0"
description = ""
authors = ["Tolstikov Maksim <tolstikov_m@mail.ru>"]

[tool.poetry.dependencies]
python = "3.9.5"
APScheduler = "^3.9.1"
clickhouse-driver = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
